--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
               </div>
               <div class="">
                 <button class="btn btn-success" onclick="baiTap3()">Tìm số nhỏ nhất</button>
-                <div id="ketQua3" class="mt-4">
-                </div>
+              </div>
+              <div id="ketQua3" class="alert alert-success" style="display:none">
+              </div>
 
               <div class="mb-3 mt-4">
                 <h5 for="number" class="form-label">4. Tìm số dương nhỏ nhất.</h5>
@@ -81,7 +82,43 @@
               <div id="ketQua5" class="alert alert-success" style="display:none">
               </div>
 
+              <div class="mb-3 mt-4">
+                <h5 for="number" class="form-label">7. Sắp xếp tăng dần.</h5>
+              </div>
+              <div class="">
+                <button class="btn btn-success" onclick="baiTap7()">Sắp xếp</button>
+              </div>
+              <div id="ketQua7" class="alert alert-success" style="display:none">
+              </div>
 
+
+              <div class="mb-3 mt-4">
+                <h5 for="number" class="form-label">8. Tìm số nguyên tố đầu tiên.</h5>
+              </div>
+              <div class="">
+                <button class="btn btn-success" onclick="baiTap8()">Tìm số nguyên tố</button>
+              </div>
+              <div id="ketQua8" class="alert alert-success" style="display:none">
+              </div>
+
+
+              <div class="mb-3 mt-4">
+                <h5 for="number" class="form-label">9. Đếm số nguyên.</h5>
+              </div>
+              <div class="">
+                <button class="btn btn-success" onclick="baiTap9()">Đếm số</button>
+              </div>
+              <div id="ketQua9" class="alert alert-success" style="display:none">
+              </div>
+
+              <div class="mb-3 mt-4">
+                <h5 for="number" class="form-label">10. So sánh số lượng số âm và dương.</h5>
+              </div>
+              <div class="">
+                <button class="btn btn-success" onclick="baiTap10()">So sánh</button>
+              </div>
+              <div id="ketQua10" class="alert alert-success" style="display:none">
+              </div>
 
               </div>
              
